[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2024"

[dev-dependencies]
qonduit = { path = "../qonduit", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[example]]
name = "command"
path = "command.rs"

[[example]]
name = "query"
path = "query.rs"

[[example]]
name = "event"
path = "event.rs"
