[package]
name = "qonduit"
version = "0.1.0"
edition = "2024"
description = "A Rust implementation of the CQRS pattern."
license = "MIT"
repository = "https://github.com/botylev/qonduit"
documentation = "https://docs.rs/qonduit"
homepage = "https://github.com/botylev/qonduit"
readme = "README.md"
keywords = ["cqrs", "command", "query", "async"]
categories = ["asynchronous", "concurrency"]
authors = ["Iurii Botylev <botylev@protonmail.com"]

[dependencies]
async-trait = "0.1.88"

[dev-dependencies]
tokio = { version = "1.44.1", features = ["rt", "macros"] }

[features]
default = []
macros = []

[package.metadata.docs.rs]
all-features = true